[README] Fix README formatting and add Build section